# midiplayer

./: .gitignore  AGENTS.md  README.md  build_exe.ps1  pyproject.toml  requirements.txt
packaging/: MIDI Mixer Player.spec
sample_midis/: README.md
src/midi_mixer_player/: app.py  main.py
src/midi_mixer_player/audio/: export_wav.py  fluidsynth_runtime.py  playback_engine.py
src/midi_mixer_player/core/: models.py  project_file.py  settings.py
src/midi_mixer_player/midi/: gm_names.py  parser.py  tempo_map.py  transformer.py
src/midi_mixer_player/ui/: main_window.py  master_strip.py  mixer_strip.py  settings_dialog.py
tests/: test_parser.py  test_playback_engine.py  test_project_file.py  test_settings.py  test_tempo_map.py  test_transformer.py
